<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single"
           android:id="@+id/group2">
            <item
                android:id="@+id/nav_trackOrder"
                android:icon="@drawable/ic_my_voucher"
                android:title="@string/my_voucher" />

            <item
                android:id="@+id/nav_myAccount"
                android:icon="@drawable/ic_tranfer"
                android:title="@string/my_account" />

            <item
                android:id="@+id/nav_newsFeed"
                android:icon="@drawable/ic_buy_point"
                android:title="@string/my_report" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="Báo cáo" />

            <item
                android:id="@+id/nav_wishList"
                android:icon="@drawable/ic_hisory"
                android:title="@string/my_history" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="Quét mã" />


    </group>
</menu>

