<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <include
        layout="@layout/toolbar_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@color/lightGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.StatusActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightGray"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/info_perform"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"

                android:gravity="start|center"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/number_voucher"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold"
                android:text="5253532" />

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="@dimen/dimen15dp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:textColor="@color/vDarkGray"
                android:textSize="@dimen/dimen14sp"
                android:textStyle="bold"
                android:text="1/1/2020" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightGray"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/infor_voucher"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:background="@color/white"
            android:id="@+id/productItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="100dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen10dp"
                android:contentDescription="@string/voucher_image"
                android:src="@drawable/voucher1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="50dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Mã giảm giá"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp" />

                <TextView
                    android:id="@+id/txtProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:text="500.0 điểm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen10dp"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/dimen10dp"
                    android:paddingEnd="@dimen/dimen10dp"
                    android:text="@string/detail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:gravity="start|center"
                    android:paddingStart="@dimen/dimen10dp"
                    android:paddingEnd="@dimen/dimen10dp"
                    android:text="@string/detail_content"
                    android:textColor="@color/vDarkGray"
                    android:textSize="@dimen/dimen14sp" />


            </LinearLayout>
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/lightGray"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/status_bar"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp"
            android:textStyle="bold" />
        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:background="@color/white"
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="Voucher chưa được sử dụng"
            android:textColor="@color/vDarkGray"
            android:textSize="@dimen/dimen16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen30dp"
            android:layout_marginRight="@dimen/dimen10dp"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:background="@color/green"
            android:padding="@dimen/dimen10dp"
            android:text="@string/use_voucher"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18sp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>