<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbardetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".view.DetailsActivity">

            <ImageView
                android:id="@+id/imageOfVoucher"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/white"
                android:contentDescription="@string/voucher_image"
                android:src="@drawable/voucher1"
                tools:scaleType="fitXY" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1dp"
                android:background="@color/lightGray" />

            <TextView
                android:id="@+id/nameOfVoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen20sp"
                android:text="Mã giảm giá" />

            <TextView
                android:id="@+id/priceOfVoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen20sp"
                android:textStyle="bold"
                android:text="500.0 điểm" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1dp"
                android:background="@color/lightGray" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="@dimen/dimen10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen20sp"
                    android:text="@string/detail" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtDetailContent"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="start"
                android:background="@color/white"
                android:padding="@dimen/dimen10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen15dp"
                android:text="@string/detail_content" />



            <Button
                android:id="@+id/buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:background="#FFB900"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>